# IHPTD1

MandelbrotOpenMP/: CMakeLists.txt  mandelbrot_openMp.c
MandelbrotPthread/: mandelbrot_sequentiel.c  mandelbrot_thread.c
