cmake_minimum_required(VERSION 3.13)
project(IHPTD1-2)
set(CMAKE_CXX_STANDARD 14)
FIND_PACKAGE(OpenMP REQUIRED)
set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
add_executable(IHPTD1-2 mandelbrot_openMp.c mandelbrot_openMp.c)
